<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
        <Button
            android:id="@+id/button_next_act"
            android:text="@string/next_to_act"
            android:onClick="nextThing"/>
        <Button
            android:id="@+id/button_next_pass"
            android:text="@string/next_pass"
            android:enabled="false"
            android:onClick="nextThing"/>
        <Button
            android:id="@+id/button_new_round"
            android:text="@string/new_round"
            android:enabled="false"
            android:onClick="nextThing"/>
    </GridLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/button_add_participant"
            android:text="@string/add_participant"
            android:onClick="addParticipant"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/button_remove_others"
            android:text="@string/remove_others"
            android:onClick="removeGroup"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/button_remove_enemies"
            android:text="@string/remove_enemies"
            android:onClick="removeGroup"/>

    </LinearLayout>

</LinearLayout>
