<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_initiative"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="?attr/colorAccent"
        android:paddingLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/text_title"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/text_title"
        android:id="@+id/line"
        android:background="@color/colorAccent"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line"
        android:paddingLeft="2dp"
        android:hint="@string/type"
        android:id="@+id/text_type"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line"
        android:layout_toRightOf="@+id/text_type"
        android:layout_marginLeft="5dp"
        android:singleLine="true"
        android:ellipsize="end"
        android:id="@+id/text_name"
        android:hint="@string/name"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_name"
        android:id="@+id/editText_initiative"
        android:hint="@string/initiative"
        android:inputType="number"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

</RelativeLayout>