<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line"
        android:layout_toRightOf="@+id/text_name"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:hint="@string/type"
        android:id="@+id/text_type"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:singleLine="true"
        android:ellipsize="end"
        android:layout_below="@+id/line"
        android:id="@+id/text_name"
        android:hint="@string/name"
        android:textAppearance="@android:style/TextAppearance.Medium"/>


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_name"
        android:id="@+id/editText_initiative"
        android:hint="@string/initiative"
        android:inputType="number"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

</LinearLayout>